--- a/SystemMonitorApp/MainWindow.xaml
+++ b/SystemMonitorApp/MainWindow.xaml
@@ -2,27 +2,20 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Hardware Monitor" 
-        Height="550" 
-        Width="300"
+        Height="450" 
+        Width="400"
         WindowStyle="None" 
         AllowsTransparency="True" 
         Background="Transparent" 
         Topmost="True"
         Opacity="0.8">
+
     <Border Background="Black" CornerRadius="10" Padding="10">
         <StackPanel>
-            <TextBlock x:Name="textBlockCpuInfo" 
+            <TextBlock x:Name="textBlockHardwareInfo" 
                        Foreground="White" 
                        FontSize="14" 
-                       Margin="0,0,0,10" />
-            <TextBlock x:Name="textBlockGpuInfo" 
-                       Foreground="White" 
-                       FontSize="14" 
-                       Margin="0,0,0,10" />
-            <TextBlock x:Name="textBlockRamUsage" 
-                       Foreground="White" 
-                       FontSize="14" 
-                       Margin="0,0,0,10" />
+                       TextWrapping="Wrap" />
         </StackPanel>
     </Border>
 </Window>
